remove: register api
